--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
             <div class="row align-items-center">
                 <div class="col-xs-12 col-sm-12 col-md-6 col-xl-6">
                     <h1 class="text-white" id="main-header">Get the most fun weather app</h1>
-                    <p class="text-white" id="sub-header">Simple, nice and user-friendly application of the weather. Only useful
+                    <p class="text-white" id="sub-header">Simple, nice and user-friendly application of the weather.
+                        Only useful
                         information</p>
                     <button type="button" class="btn btn-secondary orange btn-lg">Download</button>
                     <button type="button" class="btn btn-secondary blue btn-lg">Features</button>
