spacing and tidying up

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                 <div class="media">
                     <img class="align-self-start mr-3" src="assets/icon1.png">
                     <div class="media-body">
-                        <h5 class="custom-purple mt-0">Usability</h5>
-                        <p class="custom-grey-content">
+                        <h5 class="custom-purple mt-0 mb-3 feature-name">Usability</h5>
+                        <p class="custom-grey-2 feature-content">
                             Sometimes the simplest things are the hardest to find. So we created a new line for
                             everyday life
                         </p>
@@ -106,8 +106,8 @@
                 <div class="media">
                     <img class="align-self-start mr-3" src="assets/icon2.png">
                     <div class="media-body">
-                        <h5 class="custom-purple mt-0">Parallax Effect</h5>
-                        <p class="custom-grey-content">
+                        <h5 class="custom-purple mt-0 mb-3 feature-name">Parallax Effect</h5>
+                        <p class="custom-grey-2 feature-content">
                             Sometimes the simplest things are the hardest to find. So we created a new line for
                             everyday life
                         </p>
@@ -118,8 +118,8 @@
                 <div class="media">
                     <img class="align-self-start mr-3" src="assets/icon3.png">
                     <div class="media-body">
-                        <h5 class="custom-purple mt-0">Unlimites Colores</h5>
-                        <p class="custom-grey-content">
+                        <h5 class="custom-purple mt-0 mb-3 feature-name">Unlimites Colores</h5>
+                        <p class="custom-grey-2 feature-content">
                             Sometimes the simplest things are the hardest to find. So we created a new line for
                             everyday life
                         </p>
